--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     
     <figure class="container-img">
-    <img class="center" src="robo4.png">
+    <img class="center" src="robo3.png">
     </figure>
 
     <div class="container">
@@ -32,6 +32,11 @@
             <li class="item-menu">
                 <a href="index.html">
                     <span class="icon"><i class="bi bi-list"></i></span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="index.html">
+                    <span class="icon"><i class="bi bi-house"></i></span>
                     <span class="txt-link">Home</span>
                 </a>
             </li>
@@ -59,8 +64,7 @@
                 </a>
             </li>
         </ul>
-    
-       </nav> 
+    </nav> 
 
     <script src="menu.js"></script>
 </body>
