--- a/loc.html
+++ b/loc.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Website icon" type="png"
-          href="logo2.png">
+    <link rel="Website icon" type="png" href="logo2.png">
     <title>Localização</title>
 
     <link rel="stylesheet" href="loc-style.css">
@@ -38,12 +37,17 @@
         <ul>
             <li class="item-menu">
                 <a href="index.html">
+                    <span class="icon"><i class="bi bi-list"></i></span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="index.html">
                     <span class="icon"><i class="bi bi-house"></i></span>
                     <span class="txt-link">Home</span>
                 </a>
             </li>
             <li class="item-menu">
-                <a href="trabalhos.htm">
+                <a href="trabalhos.html">
                     <span class="icon"><i class="bi bi-image"></i></span>
                     <span class="txt-link">Trabalhos</span>
                 </a>
@@ -66,8 +70,7 @@
                 </a>
             </li>
         </ul>
-    
-       </nav>  
+    </nav>  
    <script src="menu.js"></script>
 </body>
 </html>
