--- a/sobre.html
+++ b/sobre.html
@@ -9,18 +9,59 @@
     <title>Sobre</title>
 
     <link rel="stylesheet" href="sobre-style.css">
+    <link rel="stylesheet" href="abas-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header>
-    <section >
-        <p class="nosso-nome"> D-Boots</p> 
-        <div class="entrada" >
-            <a href="abas.html">
-            <img src="logo.png" class="logo"></a>
-        </section>
-    </header>
+    <div class="container">
+        <img src="logo.png" class="elemento">
+        </div>
+    </div> 
+
+    <!-- <p class="nosso-nome"> D-Boots</p> -->
+
+    <nav class="menu-lateral">
+        <ul>
+            <li class="item-menu">
+                <a href="index.html">
+                    <span class="icon"><i class="bi bi-list"></i></span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="index.html">
+                    <span class="icon"><i class="bi bi-house"></i></span>
+                    <span class="txt-link">Home</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="trabalhos.html">
+                    <span class="icon"><i class="bi bi-image"></i></span>
+                    <span class="txt-link">Trabalhos</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="sobre.html">
+                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
+                    <span class="txt-link">Sobre</span>
+                </a>
+            </li>
+            <li class="item-menu">
+            <a href="loc.html">
+                <span class="icon"><i class="bi bi-geo-alt"></i></span>
+                <span class="txt-link">Localização</span>
+            </a>
+            <li class="item-menu">
+                <a href="nos.html">
+                    <span class="icon"><i class="bi bi-people-fill"></i></span>
+                    <span class="txt-link">Nós</span>
+                </a>
+            </li>
+        </ul>
+    </nav> 
+
+    <script src="menu.js"></script>
 
     <section>
         <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de incentivar o desenvolvimento tecnologico, postarmos projetos desenvolvidos durante as aulas de robotica. Fundada por alunos do colegio estadual unidade polo. </p>
