--- a/trabalhos.html
+++ b/trabalhos.html
@@ -39,19 +39,11 @@
 
 
         </div>      
-        <li class="fotosprojetos">
-            <img src="imagem.png" alt="imagem" class="imagem">
-            <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
-            <img src="trabalho.jpg" alt="trabalho" class="trabalho">
+        <ul class="fotosprojetos">
             
-
-
-
-
-        </li>
-        
-
-
-
+        <li><img src="imagem.png" alt="imagem" class="imagem"></li>
+        <li><img src="ondaverde.jpg" alt="ondaverde" class="ondaverde"> </li>
+       <li> <img src="trabalho.jpg" alt="trabalho" class="trabalho"></li>
+    </ul>
 </body>
 </html>
