--- a/trabalhos.html
+++ b/trabalhos.html
@@ -39,11 +39,15 @@
 
 
         </div>      
-        <ul class="fotosprojetos">
+        <li class="fotosprojetos">
             
-        <li><img src="imagem.png" alt="imagem" class="imagem"></li>
-        <li><img src="ondaverde.jpg" alt="ondaverde" class="ondaverde"> </li>
-       <li> <img src="trabalho.jpg" alt="trabalho" class="trabalho"></li>
-    </ul>
+
+        </li>
+        
+        <img src="imagem.png" alt="imagem" class="imagem">
+        <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
+        <img src="trabalho.jpg" alt="trabalho" class="trabalho">
+
+
 </body>
 </html>
