--- a/trabalhos.html
+++ b/trabalhos.html
@@ -40,13 +40,17 @@
 
         </div>      
         <li class="fotosprojetos">
+            <img src="imagem.png" alt="imagem" class="imagem">
+            <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
+            <img src="fototrabalho.jpg" alt="fototrabalho" class="fototrabalho">
             
+
+
+
 
         </li>
         
-        <img src="imagem.png" alt="imagem" class="imagem">
-        <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
-        <img src="trabalho.jpg" alt="trabalho" class="trabalho">
+
 
 
 </body>
