--- a/loc.html
+++ b/loc.html
@@ -30,8 +30,7 @@
     </ul>
 
     <div class="mapa-conteudo">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58503.19744076339!2d-46.69824986874998!3d-23.5881948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1653262588916!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65219923.53044546!2d-106.50085750912312!3d-3.872623202944786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a518a690ca2a93d%3A0xdce616971e86954!2sOceano%20Atl%C3%A2ntico%20Sul!5e0!3m2!1spt-BR!2sbr!4v1684926119164!5m2!1spt-BR!2sbr" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
 
     <nav class="menu-lateral">
         <ul>
