--- a/trabalhos.html
+++ b/trabalhos.html
@@ -42,7 +42,7 @@
         <li class="fotosprojetos">
             <img src="imagem.png" alt="imagem" class="imagem">
             <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
-            <img src="fototrabalho.jpg" alt="fototrabalho" class="fototrabalho">
+            <img src="imgfotos.jpg" alt="imgfotos" class="imgfotos">
             <img src="fototra.jpg" alt="fototra" class="fototra">
             
 
