--- a/trabalhos.html
+++ b/trabalhos.html
@@ -43,7 +43,7 @@
             <img src="imagem.png" alt="imagem" class="imagem">
             <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
             <img src="imgfotos.jpg" alt="imgfotos" class="imgfotos">
-            <img src="fototra.jpg" alt="fototra" class="fototra">
+            <img src="cruzamentoimg.jpg" alt="cruzamentoimg" class="cruzamentoimg">
             
 
 
