--- a/trabalhos.html
+++ b/trabalhos.html
@@ -44,8 +44,7 @@
             <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
             <img src="imgfotos.jpg" alt="imgfotos" class="imgfotos">
             <img src="cruzamentoimg.jpg" alt="cruzamentoimg" class="cruzamentoimg">
-            
-
+            <img src="sinal.jpg" alt="sinal" class="sinal">
 
 
 
