--- a/trabalhos.html
+++ b/trabalhos.html
@@ -44,7 +44,7 @@
             <img src="ondaverde.jpg" alt="ondaverde" class="ondaverde">
             <img src="imgfotos.jpg" alt="imgfotos" class="imgfotos">
             <img src="cruzamentoimg.jpg" alt="cruzamentoimg" class="cruzamentoimg">
-            <img src="sinalimg.jpg" alt="sinalimg" class="sinalimg">
+            <img src="sinalsimples.jpg" alt="sinalsimples" class="sinalsimples">
 
 
 
