--- a/trabalhos.html
+++ b/trabalhos.html
@@ -45,6 +45,7 @@
             <img src="imgfotos.jpg" alt="imgfotos" class="imgfotos">
             <img src="cruzamentoimg.jpg" alt="cruzamentoimg" class="cruzamentoimg">
             <img src="sinalsimples.jpg" alt="sinalsimples" class="sinalsimples">
+            <img src="imgfootos.jpg" alt="imgfootos" class="imgfootos">
 
 
 
