--- a/trabalhos.html
+++ b/trabalhos.html
@@ -46,6 +46,7 @@
             <img src="cruzamentoimg.jpg" alt="cruzamentoimg" class="cruzamentoimg">
             <img src="sinalsimples.jpg" alt="sinalsimples" class="sinalsimples">
             <img src="imgfootos.jpg" alt="imgfootos" class="imgfootos">
+            <img src="projetofoto.jpg" alt="projetofoto" class="projetofoto">
 
 
 
