--- a/trabalhos.html
+++ b/trabalhos.html
@@ -47,6 +47,7 @@
             <img src="sinalsimples.jpg" alt="sinalsimples" class="sinalsimples">
             <img src="imgfootos.jpg" alt="imgfootos" class="imgfootos">
             <img src="projetofoto.jpg" alt="projetofoto" class="projetofoto">
+            <img src="trabalhosiimg.jpg" alt="trabalhosiimg" class="trabalhosiimg">
 
 
 
