--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </div>
     </div> 
 
-    <!-- <p class="nosso-nome"> D-Boots</p> -->
+    <div class="texto">
+        <p class="nosso-nome">D-Boots</p>
+        <p class="descricao">A d-boots é um grupo de alunos que tem com objeivo crescerem no mundo da tecnologia. Neste site, terá todos os nossos trabalahos, localização e também falaremos um pouco sobre o quequeremos.</p>
+    </div>
 
     <nav class="menu-lateral">
         <ul>
