--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Geologica&display=swap" rel="stylesheet">
 
 </head>
 <body>
     
+    <div class="container">
+        <img src="logo3.png" class="elemento">
+        </div>
+    </div> 
+
     <figure class="container-img">
     <img class="center" src="robo3.png">
     </figure>
 
-    <div class="container">
-        <img src="logo.png" class="elemento">
-        </div>
-    </div> 
-
-    <div class="texto">
+    <section class="principal">
         <p class="nosso-nome">D-Boots</p>
-        <p class="descricao">A d-boots é um grupo de alunos que tem com objeivo crescerem no mundo da tecnologia. Neste site, terá todos os nossos trabalahos, localização e também falaremos um pouco sobre o quequeremos.</p>
-    </div>
+        <p class="descricao">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia. Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.</p>
+    </section>
 
     <nav class="menu-lateral">
         <ul>
