--- a/SOBRE.html
+++ b/SOBRE.html
@@ -67,6 +67,7 @@
         <p class ="texto"> A D-BOOTS foi criada em 2023 com o intuito de mostrar projetos prontos e os que ainda estão em desenvolvimento, feitos durante as aulas de robotica. Fundada por alunos do colegio estadual unidade polo.
 
          Cada integrante está responsavél por uma página, sendo elas:
+          trabalhos, localização, sobre, home e nós.
            </p>
     </section>
 </body>
