--- a/index.html
+++ b/index.html
@@ -1,76 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
     <link rel="Website icon" type="png"
-          href="logo2.png">
-    <title>Robótica</title>
+          href="pacman.png">
+    <title>Pacman</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="abas-style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Geologica&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <div class="container">
-        <img src="logo3.png" class="elemento">
+    <header>
+        <div class="entrada">
+            <img src="pacman2.gif" alt="imagem do Pacman" class="pac-real">
+            <img src="pac-man.png" alt="esquita pacman" class="escrita-pac">
+            <a class="botao-jogar" href="https://www.google.com/logos/2010/pacman10-i.html">JOGAR</a>
         </div>
-    </div> 
-
-    <figure class="container-img">
-    <img class="center" src="robo3.png">
-    </figure>
-
-    <section class="principal">
-        <p class="nosso-nome">D-Boots</p>
-        <p class="descricao">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia. Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.</p>
+    </header>
+    <section class="historia">
+        <p class="titulo">A HISTÓRIA DO PACMAN </p>
+        <p class="subtitulo">começou em um jantar com muita pizza...</p>
+        <p class="descricao">Pac-man é considerado um clássico da história dos videogames. Elaborado para o console Atari 2600 no início dos anos 80, tornou-se um dos jogos mais populares do mundo. A mecânica do game era simples: Pac-Man comia pastilhas fugindo de fantasmas em um labirinto. O objetivo era comer todas as pastilhas sem ser alcançado pelos fantasmas, aumentando progressivamente a dificuldade.</p>
+        <img src="pacman3.gif" class="pac-correndo">  
+        <img src="jogo.gif" alt="demonstração do jogo" class="jogo">    
+        <p class="criacao">O designer de jogos da Namco, Tohru Iwatani, idealizou o conhecidíssimo Pac-Man em um jantar entre amigos. Sua inspiração partiu de uma pizza que viera com uma fatia faltando. Antes de ser o Pac-Man, o personagem dos videogames se chamava Puck-Man, porém decidiram mudar seu nome para evitar que “Puck” ganhasse uma conotação pejorativa na língua inglesa.</p>
     </section>
 
-    <nav class="menu-lateral">
-        <ul>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-list"></i></span>
-                </a>
+    <main class="caixa-roxa">
+            <h1 class="caracteristicas" >Personagens e suas caracteristicas</h1> 
+        <div class="eles">
+            <li>
+                <img class="pers" src="pac-verm.gif" alt="fantasma vermelgo">
+                <p>Líder</p>
             </li>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-house"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
+            <span></span>
+            <li>
+                <img class="pers" src="pac-rosa.gif" alt="fantasma rosa">
+                <p>Apaixonada</p>
             </li>
-            <li class="item-menu">
-                <a href="trabalhos.html">
-                    <span class="icon"><i class="bi bi-image"></i></span>
-                    <span class="txt-link">Trabalhos</span>
-                </a>
+            <span></span>
+            <li>
+                <img class="pers" src="pac-azul.gif" alt="fantasma azul">
+                <p>Bipolar</p>
             </li>
-            <li class="item-menu">
-                <a href="sobre.html">
-                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
-                    <span class="txt-link">Sobre</span>
-                </a>
+            <span></span>
+            <li>
+                <img class="pers" src="pac-laran.png" alt="fantasma laranja">
+                <p>Estupido</p>
             </li>
-            <li class="item-menu">
-            <a href="loc.html">
-                <span class="icon"><i class="bi bi-geo-alt"></i></span>
-                <span class="txt-link">Localização</span>
-            </a>
-            <li class="item-menu">
-                <a href="nos.html">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nós</span>
-                </a>
-            </li>
-        </ul>
-    </nav> 
-
-    <script src="menu.js"></script>
+        </div> 
+    </main>
 </body>
 </html>
