--- a/loc.html
+++ b/loc.html
@@ -73,4 +73,8 @@
    <script src="menu.js"></script>
 </body>
 </html>
-   
+    
+<footer class="rodape">
+    <img src="logo.png" alt="logo d_boots_">
+
+</footer>
