--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <span class="txt-link">Localização</span>
             </a>
             <li class="item-menu">
-                <a href="nos.html">
+                <a href="Nos.html">
                     <span class="icon"><i class="bi bi-people-fill"></i></span>
                     <span class="txt-link">Nós</span>
                 </a>
