--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="item-menu">
                 <a href="Nos.html">
                     <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nós</span>
+                    <span class="txt-link">Nos</span>
                 </a>
             </li>
         </ul>
