--- a/trabalhos.html
+++ b/trabalhos.html
@@ -28,8 +28,10 @@
                 <div class="estudante-todos">
                     <span></span>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="bella.png" alt="foto da Bella">
-                    <h3 class="estudante-nome">Bella</h3>
+                    <img class="projetofoto-imagem" src="projetofoto.jpg" alt="foto do projetofoto-imagem">
+                    <h3 class="estudante-nome">Prodjodjdjodjosjdodjojsodjjdos
+                        dufufhdfhduhfudhfuhfudhffud
+                    </h3>
                     <a href="https://github.com/Bellitah"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
                     <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
