--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <span class="txt-link">Localização</span>
             </a>
             <li class="item-menu">
-                <a href="Nos.html">
+                <a href="nos.html">
                     <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nos</span>
+                    <span class="txt-link">Nós</span>
                 </a>
             </li>
         </ul>
