--- a/trabalhos.html
+++ b/trabalhos.html
@@ -28,7 +28,7 @@
                 <div class="estudante-todos">
                     <span></span>
                 <div class="estudante-div">
-                    <img class="projetofoto-imagem" src="bella.png" alt="foto da Bella">
+                    <img class="projetofoto.jpgestudante-imagem" src="projetofoto.jpg" alt="foto do projetofoto">
                     <h3 class="estudante-nome">Bella</h3>
                     <a href="https://github.com/Bellitah"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
