--- a/sobre.html
+++ b/sobre.html
@@ -1,6 +1,6 @@
     <section class="sobre">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">sobre</h2>
-            <p class="escola-texto-um">O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica, e postarmos sobre projetos desenvolvidos em sala.</p>
+            <p class="escola-texto-um">O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.</p>
             <p class="escola-texto-dois">Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
      </section>
