--- a/trabalhos.html
+++ b/trabalhos.html
@@ -70,12 +70,46 @@
                 </div>
                 </div>
             </section>
-
-
-
-        
-
-
-
+            </section>
+        <nav class="menu-lateral">
+            <ul>
+                <li class="item-menu">
+                    <a href="index.html">
+                        <span class="icon"><i class="bi bi-list"></i></span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="index.html">
+                        <span class="icon"><i class="bi bi-house"></i></span>
+                        <span class="txt-link">Home</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="trabalhos.html">
+                        <span class="icon"><i class="bi bi-image"></i></span>
+                        <span class="txt-link">Trabalhos</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="sobre.html">
+                        <span class="icon"><i class="bi bi-columns-gap"></i></span>
+                        <span class="txt-link">Sobre</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                <a href="loc.html">
+                    <span class="icon"><i class="bi bi-geo-alt"></i></span>
+                    <span class="txt-link">Localização</span>
+                </a>
+                <li class="item-menu">
+                    <a href="nos.html">
+                        <span class="icon"><i class="bi bi-people-fill"></i></span>
+                        <span class="txt-link">Nós</span>
+                    </a>
+                </li>
+            </ul>
+        </nav> 
+    
+        <script src="menu.js"></script>
 </body>
 </html>
