--- a/trabalhos.html
+++ b/trabalhos.html
@@ -9,6 +9,7 @@
     <title>Trabalhos</title>
 
     <link rel="stylesheet" href="trabalhos-style.css">
+    <link rel="stylesheet" href="abas-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     
     </head>
