--- a/trabalhos.html
+++ b/trabalhos.html
@@ -15,12 +15,10 @@
     </head>
 <body>
 
-        <section>
-        <p class="nosso-nome"> D-Boots</p> 
-        <div class="entrada" >
-            <a href="abas.html">
-            <img src="logo.png" class="logo"></a>
-        </section>
+    <div class="container">
+        <img src="logo3.png" class="elemento">
+        </div>
+    </div> 
 
             <section class="estudantes">
                 <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
