--- a/trabalhos.html
+++ b/trabalhos.html
@@ -25,7 +25,7 @@
                 <div class="estudante-todos">
                     <span></span>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="bella.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="fototrabalho.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Bella</h3>
                 </div>
                 <div class="estudante-div">
