--- a/trabalhos.html
+++ b/trabalhos.html
@@ -29,14 +29,14 @@
                     <h3 class="estudante-nome">Bella</h3>
                 </div>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="isa.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="ondaverde.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Isadora</h3>
                     <a href="https://github.com/brandaoisadora"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/isa_brandaooo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
                     <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 </div>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="leo.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="imagem.png" alt="foto da Bella">
                     <h3 class="estudante-nome">Leonardo</h3>
                     <a href="https://github.com/TROXAAA"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/xzx_l.e.o_xzx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -45,14 +45,14 @@
                 <span></span>
                 <span></span>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="marya.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="trabalhosiimg.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Marya Vitoria</h3>
                     <a href="https://github.com/mavi190275"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/marya_vitoria07/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
                     <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 </div>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="gab.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="imgfotos.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Gabriel</h3>
                     <a href="https://github.com/alves09"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/gabriel_costa_05/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
